# rui_research

./: Cargo.toml  README.md  build_android.py  build_wasm32.sh  run_profiler.sh
.cargo/: config.toml
src/: bin.rs  components.rs  general.rs  lib.rs  main.rs  sdl_engine.rs  tex_man.rs  texture.rs  utils.rs  widget_gallery.rs  widgets.rs  window.rs
src/engines/sdl/: mod.rs  render_geometry.rs  sdl_engine.rs  sdl_window.rs
src/general/: color.rs  geometry.rs  mod.rs  polygon.rs  rect.rs  size2d.rs  textured_polygon.rs  vector2d.rs
src/texture/: alpha_soft_texture.rs  mod.rs  ram_soft_texture.rs  soft_texture.rs  texture_manager.rs
src/themes/: mod.rs  primitives_manager_for_themes.rs  property.rs  theme_engine.rs
src/themes/styles/: arc_fn_new_style_for_widget.rs  mod.rs  style.rs  style_enum.rs  style_for_widget.rs  style_master.rs
src/themes/theme_per_widget/: theme_for_button.rs  theme_for_image.rs  theme_for_text.rs  theme_for_widget.rs  theme_style.rs
src/utils/: assets.rs  downcast.rs  mod.rs  sdl_logger_pipe.rs
src/widgets/: button.rs  common_widget.rs  compound.rs  custom_widget.rs  direction.rs  downcastable_borrowed_widget.rs  image.rs  mod.rs  next_position_calculator.rs  primitive.rs  shape.rs  text.rs  text_box.rs  theme.rs  widget.rs  widget_enum.rs  widget_manager.rs
src/widgets/events/: event.rs  has_events.rs  key_down.rs  mod.rs  mouse_button_down.rs
src/widgets/primitives/: bitmap.rs  mod.rs  primitive.rs  shape.rs  (+1 more)
src/window/: mod.rs  root.rs  window.rs  window_builder.rs  window_specs.rs  window_trait.rs
web/: index.html
(+41 files in other folders)
