[package]
name = "rui_research"
version = "0.1.0"
edition = "2021"
default-run = "widget_gallery"

# Uncomment these to generate android build
#[lib]
#name = "main"
#crate-type = ["cdylib"]

[dependencies]
sdl2 = { path = "../rust-sdl2-2.0.18", features = ["unsafe_textures"] }
glyph_brush = "0.7.7"
mopa = "0.2.2"
emscripten_main_loop = "0.1.1"
env_logger = "0.10.0"
log = "0.4.17"
rayon = "1.7.0"